add eras and spinoff methods: getbyId, post, put and delete, and add test in progress
