# src/middleware/validate.js
@@ -66,8 +66,28 @@ const saveMovie = (req, res, next) => {
     });
   };
 
+  const saveSpinoff = (req, res, next) => {
+    const validationRule = {
+      title: 'required|string',
+      related: 'required|string',
+      type: 'required|string'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+      if (!status) {
+        res.status(412).send({
+          success: false,
+          message: "Validation failed",
+          data: err
+        });
+      } else {
+        next();
+      }
+    });
+  };
+
 module.exports = {
   saveMovie,
   saveCharacter,
-  saveEra
+  saveEra,
+  saveSpinoff
 };
